--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "android.example.com.visualizerpreferences"
         minSdkVersion 10
@@ -21,4 +21,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.1.0'
     // TODO (1) Add the gradle dependency for the support preference fragment
+    compile 'com.android.support:preference-v7:25.1.0'
+
 }
